# millipede

./: Cargo.toml  README.md  \
assets/textures/xcfs/: beetle.xcf  explosions.xcf  millipede.xcf  scorpion.xcf  scorpions.xcf  segments.xcf  shroom.xcf  shrooms.xcf  snake.xcf  spider.xcf  spiders.xcf  stinger.xcf
src/: audio.rs  camera.rs  constants.rs  debug.rs  main.rs  ui.rs
src/game/: assets.rs  beetle.rs  camera.rs  explosion.rs  game.rs  level.rs  millipede.rs  mod.rs  player.rs  projectile.rs  scorpion.rs  shroom.rs  spider.rs
