[package]
name = "millipede"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1", features = ["dynamic_linking"]}
#bevy = "0.13.1"
bevy-inspector-egui = "0.23.4"
bevy_dylib = "0.13.1"
bevy_ui = "0.13.2"
rand = "0.8.5"
